<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.button.MaterialButton
                    app:cornerRadius="50dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="40dp"
                    android:id="@+id/backButton"
                    android:background="@drawable/material_button_rounded_border_background"
                    app:backgroundTint="@color/transaparent"
                    app:backgroundTintMode="src_atop"
                    android:foregroundTint="@color/gray5"
                    android:foreground="@drawable/ic_arrow_left_foreground"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    app:srcCompat="@drawable/ensinativa_logo"
                    app:tint="@color/blue5" />
                <TextView
                    android:textColor="@color/blue5"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:text="@string/ensinativa"
                    android:gravity="center"
                    android:layout_marginTop="160dp"
                    android:textSize="28sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">
                </TextView>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <com.google.android.material.textfield.TextInputLayout
                app:boxBackgroundColor="@color/white"
                android:layout_width="match_parent"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/displayNameTextInput"
                    android:hint="@string/display_name"
                    android:textSize="12sp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/gray7">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/displayNameErrorMessage"
                android:padding="0dp"
                android:layout_gravity="center"
                android:textColor="@color/red4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:text="@string/display_error_message"
                android:gravity="center"
                android:textSize="12sp"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
            </TextView>
            <com.google.android.material.textfield.TextInputLayout
                app:boxBackgroundColor="@color/white"
                android:layout_width="match_parent"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_height="60dp"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailTextInput"
                    android:hint="@string/email"
                    android:textSize="12sp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/gray7"
                    android:inputType="textEmailAddress">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/emailErrorMessage"
                android:padding="0dp"
                android:layout_gravity="center"
                android:textColor="@color/red4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:text="@string/email_error_message"
                android:gravity="center"
                android:textSize="12sp"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
            </TextView>

            <com.google.android.material.textfield.TextInputLayout
                app:boxBackgroundColor="@color/white"
                android:layout_width="match_parent"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_height="60dp"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordTextInput"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:textSize="12sp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/gray7">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/passwordErrorMessage"
                android:padding="0dp"
                android:layout_gravity="center"
                android:textColor="@color/red4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:text="@string/password_error_message"
                android:gravity="center"
                android:textSize="12sp"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
            </TextView>
            <Button
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/createAccountButton"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/material_button_5dp_border_green_background"
                app:backgroundTint="@color/transaparent"
                app:backgroundTintMode="src_atop">
            </Button>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
