<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_weight="1"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    app:srcCompat="@drawable/ensinativa_logo"
                    app:tint="@color/blue5" />
            </LinearLayout>
            <TextView
                android:layout_gravity="center"
                android:textColor="@color/blue5"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:text="@string/ensinativa"
                android:gravity="center"
                android:textSize="28sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
            </TextView>
            <com.google.android.material.textfield.TextInputLayout
                app:boxBackgroundColor="@color/white"
                android:layout_width="match_parent"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:layout_height="60dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailTextInput"
                    android:hint="@string/email"
                    android:textSize="12sp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/gray7">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/emailErrorMessage"
                android:padding="0dp"
                android:layout_gravity="center"
                android:textColor="@color/red4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_error_message"
                android:gravity="center"
                android:textSize="12sp"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
            </TextView>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="60dp">
                <com.google.android.material.textfield.TextInputLayout
                    app:boxBackgroundColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:layout_height="60dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordTextInput"
                        android:inputType="textPassword"
                        android:hint="@string/password"
                        android:textSize="12sp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/gray7">
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="48dp"
                    android:gravity="center"
                    android:id="@+id/showPasswordButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:scaleX=".8"
                    android:scaleY=".8"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:foreground="@drawable/eye_slash"
                    android:foregroundTint="@color/gray5"
                    app:tint="@color/gray5"
                    android:background="@color/transaparent"
                    app:backgroundTint="@color/transaparent"
                    app:backgroundTintMode="src_atop">
                </Button>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView
                android:id="@+id/passwordErrorMessage"
                android:padding="0dp"
                android:layout_gravity="center"
                android:textColor="@color/red4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password_error_message"
                android:gravity="center"
                android:textSize="12sp"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
            </TextView>

            <LinearLayout
                android:visibility="gone"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/rememberMeCheckBox"
                    android:layout_gravity="center"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:gravity="center">
                </CheckBox>

                <TextView
                    android:id="@+id/rememberMeTextView"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_width="140dp"
                    android:layout_height="40dp"
                    android:textColor="@color/gray7"
                    android:text="@string/remember_me"
                    android:background="@color/transaparent"
                    app:backgroundTint="@color/transaparent"
                    app:backgroundTintMode="src_atop">
                </TextView>
            </LinearLayout>
            <Button
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/sign_in"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/material_button_5dp_border_green_background"
                app:backgroundTint="@color/transaparent"
                app:backgroundTintMode="src_atop">
            </Button>
            <TextView
                android:layout_marginTop="12dp"
                android:layout_gravity="center"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/gray7"
                android:text="@string/or"
                android:background="@color/transaparent"
                app:backgroundTint="@color/transaparent"
                app:backgroundTintMode="src_atop">
            </TextView>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_gravity="center"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <Button
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:id="@+id/continue_with_facebook_button"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:text="@string/continue_with_facebook"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:background="@drawable/material_button_5dp_border_facebook_background"
                    app:backgroundTint="@color/transaparent"
                    app:backgroundTintMode="src_atop">
                </Button>
                <ImageView
                    android:elevation="2dp"
                    android:background="@drawable/material_button_5dp_border_background"
                    android:layout_marginStart="4dp"
                    app:layout_constraintTop_toTopOf="@id/continue_with_facebook_button"
                    app:layout_constraintStart_toStartOf="@id/continue_with_facebook_button"
                    app:layout_constraintBottom_toBottomOf="@id/continue_with_facebook_button"
                    android:layout_width="32dp"
                    android:layout_height="32dp"/>
                <ImageView
                    android:elevation="2dp"
                    app:layout_constraintTop_toTopOf="@id/continue_with_facebook_button"
                    app:layout_constraintStart_toStartOf="@id/continue_with_facebook_button"
                    app:layout_constraintBottom_toBottomOf="@id/continue_with_facebook_button"
                    android:padding="8dp"
                    android:id="@+id/facebookLogo"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:srcCompat="@drawable/facebook"
                    tools:layout_editor_absoluteX="33dp"
                    tools:layout_editor_absoluteY="567dp"
                    app:tint="@color/facebook" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/googleContinueLayout"
                android:layout_gravity="center"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">
                <Button
                    android:gravity="center"
                    android:id="@+id/continue_with_google_button"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:text="Continue with Google"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:background="@drawable/material_button_5dp_border_google_background"
                    app:backgroundTint="@color/transaparent"
                    app:backgroundTintMode="src_atop">
                </Button>
                <ImageView
                    android:elevation="2dp"
                    android:background="@drawable/material_button_5dp_border_background"
                    android:layout_marginStart="4dp"
                    app:layout_constraintTop_toTopOf="@id/continue_with_google_button"
                    app:layout_constraintStart_toStartOf="@id/continue_with_google_button"
                    app:layout_constraintBottom_toBottomOf="@id/continue_with_google_button"
                    android:layout_width="32dp"
                    android:layout_height="32dp"/>
                <ImageView
                    android:elevation="2dp"
                    app:layout_constraintTop_toTopOf="@id/continue_with_google_button"
                    app:layout_constraintStart_toStartOf="@id/continue_with_google_button"
                    app:layout_constraintBottom_toBottomOf="@id/continue_with_google_button"
                    android:padding="8dp"
                    android:id="@+id/googleLogo"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:srcCompat="@drawable/google"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView
                android:id="@+id/create_account_textView"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="12dp"
                android:layout_gravity="center"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="240dp"
                android:layout_height="24dp"
                android:textColor="@color/blue7"
                android:textSize="14sp"
                android:text="@string/don_t_have_an_account_sign_up"
                android:background="@color/transaparent"
                app:backgroundTint="@color/transaparent"
                app:backgroundTintMode="src_atop">
            </TextView>
            <TextView
                android:id="@+id/reset_email_textView"
                android:textSize="14sp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_gravity="center"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="240dp"
                android:layout_height="24dp"
                android:textColor="@color/blue7"
                android:text="@string/forgot_password"
                android:background="@color/transaparent"
                app:backgroundTint="@color/transaparent"
                app:backgroundTintMode="src_atop"></TextView>

            <TextView
                android:id="@+id/privacy_policies_textView"
                android:layout_width="240dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Privacy Policies"
                android:textColor="@color/blue7"
                android:textSize="14sp"
                app:backgroundTintMode="src_atop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@color/transaparent"
                app:backgroundTint="@color/transaparent"
                app:layout_constraintTop_toTopOf="parent"></TextView>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
